# ApiCov

./: .gitignore  .gitmodules  README.md  action.yml  justfile  pyproject.toml
.github/workflows/: release.yml
src/: apicov.py
src/apicov.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/modules/: CallGraphParser.py  Coverage.py  DocGen.py  ExportFetcher.py  Utils.py
src/tests/: README.md  prep_target.sh  tests.py
