[project]
name = "apicov"
version = "0.1.0"
description = "Api coverage Collector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.11.10",
    "pyinstaller>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
